Added a container to keep formatting all nice and consistent. Also finished with grid-ish styling for blogs. Added some hover over animations.

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,3 +14,9 @@ body {
   overflow-x: hidden;
   overflow-y: visible;
 }
+
+.content-container {
+  margin: 0 auto;
+  max-width: 120rem;
+  padding: 0 $xs-size;
+}
