--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -10,6 +10,7 @@ $verydark-red: #82172b;
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
 // Spacing
+$xs-size: 0.6rem;
 $s-size: 1.2rem;
 
 $m-size: 1.6rem;
