moved all blog and project styles to one central file and hopefully hover on mobile devices will work as expected

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -17,6 +17,7 @@ body {
 
 .content-container {
   margin: 0 auto;
-  max-width: 120rem;
+  //max-width: 120rem;
+  max-width: 85vw;
   padding: 0 $xs-size;
 }
