--- a/src/styles/components/_blog-project-layouts.scss
+++ b/src/styles/components/_blog-project-layouts.scss
@@ -20,7 +20,7 @@ body {
   justify-content: space-between;
   align-items: center;
   align-content: stretch;
-  max-width: 120rem;
+  max-width: 85vw;
 }
 .tile {
   width: 50rem;
