--- a/src/styles/components/_blog-project-layouts.scss
+++ b/src/styles/components/_blog-project-layouts.scss
@@ -87,15 +87,18 @@ body {
   opacity: 0;
   transition: all 0.6s ease-in-out;
 }
-.tile:hover {
+.tile:hover,
+.yeet {
   /*   background-color:#99aeff; */
   box-shadow: 0px 35px 77px -17px rgba(0, 0, 0, 0.64);
   transform: scale(1.05);
 }
-.tile:hover .img {
+.tile:hover .img,
+.yeet {
   opacity: 0.2;
 }
-.tile:hover .animate-text {
+.tile:hover .animate-text,
+.yeet {
   transform: translateX(0);
   opacity: 1;
 }
