--- a/src/styles/components/_blog-project-layouts.scss
+++ b/src/styles/components/_blog-project-layouts.scss
@@ -87,18 +87,18 @@ body {
   opacity: 0;
   transition: all 0.6s ease-in-out;
 }
-.tile:hover,
+
 .yeet {
   /*   background-color:#99aeff; */
   box-shadow: 0px 35px 77px -17px rgba(0, 0, 0, 0.64);
   transform: scale(1.05);
 }
-.tile:hover .img,
-.yeet {
+
+.yeet .img {
   opacity: 0.2;
 }
-.tile:hover .animate-text,
-.yeet {
+
+.yeet .animate-text {
   transform: translateX(0);
   opacity: 1;
 }
@@ -114,55 +114,6 @@ body {
 //   //   justify-content: space-around;
 // }
 
-.dots span {
-  position: absolute;
-  width: 5px;
-  height: 5px;
-  right: 0;
-  bottom: 0;
-  background-color: currentColor;
-  border-radius: 50%;
-  display: block;
-  opacity: 0;
-  transition: transform 0.4s ease-out, opacity 0.5s ease;
-}
-
-.tile:hover span:nth-child(1) {
-  opacity: 1;
-  transform: translate(-24rem, 1rem);
-}
-.tile:hover span:nth-child(2) {
-  opacity: 1;
-  transform: translate(-23rem, 2rem);
-}
-.tile:hover span:nth-child(3) {
-  opacity: 1;
-  transform: translate(-22rem, 3rem);
-}
-.tile:hover span:nth-child(4) {
-  opacity: 1;
-  transform: translate(-21rem, 2rem);
-}
-.tile:hover span:nth-child(5) {
-  opacity: 1;
-  transform: translate(-20rem, 1rem);
-}
-.dots span:nth-child(1) {
-  transition-delay: 0.05s;
-}
-.dots span:nth-child(2) {
-  transition-delay: 0.1s;
-}
-.dots span:nth-child(3) {
-  transition-delay: 0.15s;
-}
-.dots span:nth-child(4) {
-  transition-delay: 0.2s;
-}
-.dots span:nth-child(5) {
-  transition-delay: 0.25s;
-}
-
 @media (max-width: 85rem) {
   .wrap {
     flex-direction: column;
@@ -170,5 +121,79 @@ body {
   }
   .tile {
     width: 80vw;
+  }
+}
+@media only screen and (min-width: 760px) {
+  .tile:hover {
+    /*   background-color:#99aeff; */
+    box-shadow: 0px 35px 77px -17px rgba(0, 0, 0, 0.64);
+    transform: scale(1.05);
+  }
+  .tile:hover .img {
+    opacity: 0.2;
+  }
+  .tile:hover .animate-text {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  // .dots {
+  //   //   position: absolute;
+  //   //   // margin: 0 auto;
+  //   //   // width: 30px;
+  //   //   // height: 30px;
+  //   //   color: currentColor;
+  //   //   display: flex;
+  //   //   flex-direction: column;
+  //   //   align-items: center;
+  //   //   justify-content: space-around;
+  // }
+
+  .dots span {
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    right: 0;
+    bottom: 0;
+    background-color: currentColor;
+    border-radius: 50%;
+    display: block;
+    opacity: 0;
+    transition: transform 0.4s ease-out, opacity 0.5s ease;
+  }
+
+  .tile:hover span:nth-child(1) {
+    opacity: 1;
+    transform: translate(-24rem, 1rem);
+  }
+  .tile:hover span:nth-child(2) {
+    opacity: 1;
+    transform: translate(-23rem, 2rem);
+  }
+  .tile:hover span:nth-child(3) {
+    opacity: 1;
+    transform: translate(-22rem, 3rem);
+  }
+  .tile:hover span:nth-child(4) {
+    opacity: 1;
+    transform: translate(-21rem, 2rem);
+  }
+  .tile:hover span:nth-child(5) {
+    opacity: 1;
+    transform: translate(-20rem, 1rem);
+  }
+  .dots span:nth-child(1) {
+    transition-delay: 0.05s;
+  }
+  .dots span:nth-child(2) {
+    transition-delay: 0.1s;
+  }
+  .dots span:nth-child(3) {
+    transition-delay: 0.15s;
+  }
+  .dots span:nth-child(4) {
+    transition-delay: 0.2s;
+  }
+  .dots span:nth-child(5) {
+    transition-delay: 0.25s;
   }
 }
