Imported to main scss stylesheet

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,4 @@
 @import "./components/blog-project-layouts";
 @import "./components/blog-layout";
 @import "./components/project-layout";
+@import "./components/_blog-project-post;
