--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,4 @@
+@import "compass/css3";
 * {
   box-sizing: border-box;
 }
@@ -20,4 +21,18 @@ body {
   //max-width: 120rem;
   max-width: 75vw;
   padding: 0 $xs-size;
+}
+
+@mixin text-shadow($x: 2px, $y: 2px, $blur: 5px, $color: rgba(0, 0, 0, 0.4)) {
+  text-shadow: $x $y $blur $color;
+}
+::-moz-selection {
+  @include text-shadow(50, 2, 5, rgba(0, 0, 0, 0.4)); //background: #1c78a0;
+  color: white;
+}
+::selection {
+  @include text-shadow(50, 2, 5, rgba(0, 0, 0, 0.4)); //background: #1c78a0;
+
+  background: #1c78a0;
+  color: white;
 }
