--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,4 @@
 @import "./base/base";
 @import "./components/header";
 @import "./components/blog-project-layouts";
+@import "./components/blog-project-post";
