--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -6,6 +6,7 @@ $light-red: #e74c3c;
 $verylight-red: #fc8275;
 $dark-red: #82172b;
 $verydark-red: #82172b;
+$background-grey: #212121;
 // Font Sizes
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
