--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,4 @@
 @import "./components/header";
 @import "./components/blog-project-layouts";
 @import "./components/blog-project-post";
+@import "./components/home";
