--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -1,9 +1,31 @@
+
+html,body {
+  background-color: $background-grey;
+  overflow-x: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: $background-grey;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+  
+  
+.title-home {
+  
+  height: 100%;
+}
 .home-back {
   margin: 0;
   padding: 0;
   background-color: $background-grey;
-}
-body {
-  background-color: $background-grey;
-  overflow-x: hidden;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
 }
