--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -7,6 +7,7 @@ $verylight-red: #fc8275;
 $dark-red: #82172b;
 $verydark-red: #82172b;
 $background-grey: #212121;
+$lorem-grey: lighten($background-grey, 5%);
 // Font Sizes
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
