--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -17,7 +17,7 @@
 .header__content {
   font-size: $m-size;
   line-height: 1.6;
-  height: 9.7vh;
+  height: 9.7rem;
   padding: 0;
   margin: 0;
 }
