--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -10,8 +10,9 @@ html {
   height: 100vh;
   padding: 0;
   margin: 0;
-  @media (max-height:750px  ){
   overflow-y: scroll;
+  @media (min-height:750px  ){
+  overflow-y: hidden;
   }
 }
 .home-back {
@@ -36,11 +37,11 @@ background-color: black;
   flex-direction: row;
   justify-content: stretch;
   white-space: nowrap;
-  line-height: 0;
+  line-height: 3vh;
   font-size: 1.05rem;
   color: $background-grey;
-  @media (max-width: $desktop-breakpoint) {
-    line-height: 3vh;
+  @media (min-width: $desktop-breakpoint) {
+    line-height: 0;
   }
 }
 
@@ -49,8 +50,9 @@ background-color: black;
 }
 
 .lorem-rem {
-  @media (max-width: $desktop-breakpoint) {
-    display: none;
+display: none;
+  @media (min-width: $desktop-breakpoint) {
+    display: initial;
   }
 }
 
