--- a/src/styles/components/_blog-project-layouts.scss
+++ b/src/styles/components/_blog-project-layouts.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
   padding-top: 1rem;
@@ -18,6 +18,11 @@
     flex-direction: row;
   }
 }
+.tagCard {
+	background-color: tan;
+	border-radius: 5px;
+	margin-right:1rem;
+}
 
 .imgWrap {
   width: 100%;
@@ -25,6 +30,24 @@
 }
 .descHead {
   margin-top: 0;
+  margin-bottom: 0;
+}
+.tagWrap {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+.tagList {
+	padding: 0 1rem 0 1rem;
+	margin-top: 0;
+	margin-bottom: 0;
+
+}
+.description{
+	margin-bottom: 0;
+	margin-top: 0;
 }
 .descWrap {
   width: 100%;
