--- a/src/styles/components/_blog-project-layouts.scss
+++ b/src/styles/components/_blog-project-layouts.scss
@@ -19,30 +19,20 @@
   }
 }
 .tagCard {
-  background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+text-decoration: none;
+background: linear-gradient(120deg, #cb2d3e 0%, #ef473a 100%);
+  //background: linear-gradient(120deg, #f85032
+ //0%,  #e73827 100%);
+ color:darken(white,20%);
+ font-weight: bold;
   border-radius: 5px;
   margin-right: 1rem;
   margin-top: 0.5rem;
-  transition: background 0.25s ease-in, color 0.25s ease-in;
-  -webkit-transition: background 0.25s ease-in, color 0.25s ease-in;
-  -ms-transition: background 0.25s ease-in, color 0.25s ease-in;
-  $:hover {
-  }
+
 }
 
-.tag--magical {
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.4vh;
-  background-position: 0 88%;
-  transition: background-size 0.25s ease-in, color 0.25s ease-in;
-  -webkit-transition: background-size 0.25s ease-in, color 0.25s ease-in;
-  -ms-transition: background-size 0.25s ease-in, color 0.25s ease-in;
-  &:hover {
-    background-size: 100% 88%;
-    color: black;
-  }
-}
+//#19A2E6
+//#0E5A81
 .imgWrap {
   width: 100%;
   padding-right: 1rem;
@@ -52,6 +42,7 @@
   margin-bottom: 0;
 }
 .tagWrap {
+  text-decoration:none;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -60,6 +51,8 @@
   flex-wrap: wrap;
 }
 .tagList {
+
+  text-decoration: none;
   padding: 0 1rem 0 1rem;
   margin-top: 0;
   margin-bottom: 0;
