--- a/src/styles/components/_blog-project-layouts.scss
+++ b/src/styles/components/_blog-project-layouts.scss
@@ -18,6 +18,9 @@
     flex-direction: row;
   }
 }
+//https://matthewmagnani.com/projects
+//https://uigradients.com/#Frost
+//
 .tagCard {
 text-decoration: none;
 background: linear-gradient(120deg, #cb2d3e 0%, #ef473a 100%);
