--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,6 +4,7 @@
 }
 body {
   background-color: black;
+  overflow:hidden;
   //background-color: lighten(black, 5%);
 }
 // @mixin clearfix($currheight, $page-height) {
