--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -6,20 +6,20 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  //background-color: black;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
   line-height: 1.6;
   height: 100vh;
   padding: 0;
   margin: 0;
-  overflow-y: scroll;
+  overflow-y: none;
   @media (min-height: 750px) {
     overflow-y: hidden;
   }
 }
 .home-back {
-  background-color: black;
+  //background-color: black;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -36,11 +36,21 @@ html {
 .homeButt{
   width: 10rem;
   height: 4rem;
+   border-style: solid;
+    border-width: 5px;
   color: white;
   border-color: white;
-  
+
   background: transparent;
 }
+.hometilt{
+height: 100%;
+width: 100%;
+overflow:none;
+
+  background: black;
+}
+
 .desc-wrap {
   color: white;
   display: flex;
