--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -7,7 +7,7 @@ html {
   justify-content: center;
   align-items: center;
   //background-color: black;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Blogger", sans-serif;
   font-size: $m-size;
   line-height: 1.6;
   height: 100vh;
@@ -33,20 +33,21 @@ html {
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently*/
 }
-.homeButt{
+.homeButt {
   width: 10rem;
-  height: 4rem;
-   border-style: solid;
-    border-width: 5px;
-  color: white;
-  border-color: white;
+  padding: 1rem 0;
+  // border-style: solid;
+  // border-width: 5px;
+  // color: white;
+  // border-color: white;
 
   background: transparent;
 }
-.hometilt{
-height: 100%;
-width: 100%;
-overflow:none;
+
+.hometilt {
+  height: 100%;
+  width: 100%;
+  overflow: none;
 
   background: black;
 }
@@ -92,4 +93,34 @@ overflow:none;
 .link {
   text-decoration: none;
   color: white;
+}
+.hvr-outline-out {
+  text-align: center;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+}
+.hvr-outline-out:before {
+  content: "";
+  position: absolute;
+  border: white solid 4px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: top, right, bottom, left;
+  transition-property: top, right, bottom, left;
+}
+.hvr-outline-out:hover:before,
+.hvr-outline-out:focus:before,
+.hvr-outline-out:active:before {
+  top: -8px;
+  right: -8px;
+  bottom: -8px;
+  left: -8px;
 }
