--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -1,6 +1,13 @@
 html {
   font-size: 62.5%;
 }
+.linkWrapper {
+  display: flex; 
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
 .homeWrap {
   display: flex;
   flex-direction: column;
@@ -36,11 +43,21 @@ html {
 .homeButt {
   width: 10rem;
   padding: 1rem 0;
+  margin: 0 1rem;
+  transition: background 0.25s ease, color 0.25s ease;
+  &:hover {
+  background: white;
+  color: black;
+  //background: transparent;
+  //color: white;
+  }
   // border-style: solid;
   // border-width: 5px;
   // color: white;
   // border-color: white;
-
+  //background: white;
+  //color: black;
+  color: white;
   background: transparent;
 }
 
@@ -92,7 +109,7 @@ html {
 
 .link {
   text-decoration: none;
-  color: white;
+  //color: white;
 }
 .hvr-outline-out {
   text-align: center;
