--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,5 @@
 @import "./components/blog-project-layouts";
 @import "./components/blog-project-post";
 @import "./components/home";
+@import "./components/contact";
+@import "./components/about";
