--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -11,10 +11,46 @@
 }
 body {
   background-color: black;
+  font-family: "Helvectica", "Roboto", "Blogger", sans-serif;
   overflow: hidden;
+  overflow-x: hidden;
 
   //background-color: lighten(black, 5%);
 }
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #c0c0c0;
+  border: 0px none #7c99fa;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #d8d8d8;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #8d8d8d;
+}
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ea0006;
+  border-radius: 23px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #666666;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
 // @mixin clearfix($currheight, $page-height) {
 //   @if ($currheight >= $page-height) {
 //     height: 100vh;
@@ -24,15 +60,20 @@ body {
 // }
 .body2 {
   color: $dark-grey;
-  font-family: "Blogger", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Blogger", Helvetica, Arial, sans-serif;
   font-size: $m-size;
   line-height: 1.6;
   overflow-x: hidden;
   height: 100vh;
   overflow-y: scroll;
-
 }
-
+.wrapEvery {
+  margin-left: 2vw;
+  margin-right: 2vw;
+  margin-bottom: 2vh;
+  border-radius: 5px;
+  background-color: white;
+}
 // ::selection {
 //   text-shadow: 2px 2px #1c78a0, 1px 1px #1c78a0, 3px 3px #1c78a0, 4px 4px #1c78a0, 5px 5px #1c78a0;
 //   color: white;
