--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -8,6 +8,8 @@ $dark-red: #82172b;
 $verydark-red: #82172b;
 $background-grey: #212121;
 $lorem-grey: lighten($background-grey, 5%);
+$dark: #555;
+$color--primary: hsla(269, 100%, 50%, 1);
 // Font Sizes
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
