--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -9,6 +9,11 @@
   color: white;
   background: black;
 }
+.aboutTitle{
+text-align: center;
+  //margin: 5rem 0;
+  font-size: 4vw;
+}
 .typo {
   font-weight: 700;
   color: #585858;
