--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -3,16 +3,18 @@
   flex-direction: column;
   justify-content: flex-start;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   height: 50vh;
   font-size: 4vw;
   color: white;
   background: black;
 }
-.aboutTitle{
-text-align: center;
+.aboutTitle {
+  text-align: center;
   //margin: 5rem 0;
   font-size: 4vw;
+  margin: 0;
+  padding: 0;
 }
 .typo {
   font-weight: 700;
