--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -11,9 +11,9 @@
 }
 .aboutTitle {
   text-align: center;
-  //margin: 5rem 0;
-  font-size: 4vw;
-  margin: 0;
+  margin: 5rem 0;
+  font-size: 4rem;
+
   padding: 0;
 }
 .typo {
