--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -117,20 +117,6 @@ select {
   margin: 1rem 8vw;
   display: inline-block;
   vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-.icon:hover,
-.icon:focus,
-.icon:active {
-  -webkit-transform: translateY(-8px);
-  transform: translateY(-8px);
   cursor: pointer;
 }
 
@@ -141,6 +127,8 @@ select {
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 5rem;
+  color: white;
+  font-size: 3rem;
 }
 .singleIcon {
   margin: 2vw 0;
